# khigy-rs

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md
docker/: Docker.aarch64  aarch64.Dockerfile
src/: app.rs.old  input.rs  khigy.rs  main.rs
src/backend/: mod.rs  vulkan.rs  winit.rs
src/handlers/: mod.rs  xdg.rs
src/khigy/: mod.rs
src/khigy/handlers/: input.rs  mod.rs
