[package]
name = "khigy"
version = "0.1.0"
edition = "2021"


[features]
default = ["winit", "opengl", "vulkan", "debug"]
opengl = ["smithay/renderer_gl", "smithay/backend_egl"]
vulkan = ["smithay/backend_vulkan", "drm-fourcc"]
winit = ["smithay/backend_winit"]
debug = ["anyhow/backtrace"]


[dependencies]
env_logger = "0.10.0"
log = "0.4.20"
anyhow = { version = "1.0.75" }
drm-fourcc = { version = "2.2.0", optional = true }

[dependencies.smithay]
git = "https://github.com/Smithay/smithay.git"
rev = "2d77640d1beea21e0cfbccbeec920db3d6dccfcf"
default-features = false
features = ["backend_libinput", "wayland_frontend"]
