[package]
name = "khigy"
version = "0.1.0"
edition = "2021"


[features]
default = ["x11", "debug"]
x11 = ["smithay/backend_x11"]
debug = ["anyhow/backtrace"]


[dependencies]
env_logger = "0.10.0"
log = "0.4.20"
anyhow = { version = "1.0.75" }

[dependencies.smithay]
git = "https://github.com/Smithay/smithay.git"
rev = "2d77640d1beea21e0cfbccbeec920db3d6dccfcf"
default-features = false
features = [
    "backend_libinput",
    "backend_drm",
    "backend_gbm",
    "backend_egl",
    "backend_winit",
    "use_system_lib",
    "renderer_gl",
    "wayland_frontend",
]

[profile.dev]
# strip = true
# split-debuginfo = "packed"
